--- a/src/components/Notes.css
+++ b/src/components/Notes.css
@@ -37,6 +37,8 @@
 .notes p{
     font-size: 12px;
     font-weight: 400;
+    overflow-wrap: break-word;
+    hyphens: auto;
 }
 
  .btn3{
